<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="1dp"
    android:background="@color/colorGray">

<!--  year month  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <Button
            android:id="@+id/last_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/arrow_for_last"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/dummy_string_for_year_month"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/arrow_for_next"
            android:background="@color/colorAccent"/>

    </LinearLayout>

<!--  day of the week  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorRed"
            android:text="@string/day_of_the_week_for_sunday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlack"
            android:text="@string/day_of_the_week_for_monday"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlack"
            android:text="@string/day_of_the_week_for_tuesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlack"
            android:text="@string/day_of_the_week_for_wednesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlack"
            android:text="@string/day_of_the_week_for_thursday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlack"
            android:text="@string/day_of_the_week_for_friday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/DayOfTheWeekCell"
            android:textColor="@color/colorBlue"
            android:text="@string/day_of_the_week_for_saturday"/>

    </LinearLayout>

<!--  day  -->
    <GridView
        android:id="@+id/calendar_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp"/>

</LinearLayout>