<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_padding"
    android:paddingHorizontal="@dimen/small_padding">

<!--  start task  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_task_text"/>

<!--  YYYY年MM月DD日HH時MM分  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_year_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/year_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>

        <EditText
            android:id="@+id/start_month_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>

        <EditText
            android:id="@+id/start_day_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"/>

        <EditText
            android:id="@+id/start_hour_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>

        <EditText
            android:id="@+id/start_minuit_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuit"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_task_text" />

    <!--  YYYY年MM月DD日HH時MM分  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/end_year_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/year_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>

        <EditText
            android:id="@+id/end_month_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>

        <EditText
            android:id="@+id/end_day_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"/>

        <EditText
            android:id="@+id/end_hour_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>

        <EditText
            android:id="@+id/end_minuit_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="end"
            android:maxLength="@integer/day_and_time_max_length"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuit"/>

    </LinearLayout>

<!--  title  -->
    <EditText
        android:id="@+id/dialog_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:autofillHints="title"
        android:inputType="text" />

</LinearLayout>